@@ -1,6 +1,8 @@
 Revision 4.2.6rc0
 -----------------
 
+- Fix to CommandGenerator to make sendRequestHandle persistent across
+  multiple iterations of GETNEXT/GETBULK queries.
 - Fix to sendNotification() error handling at NotificationOriginator.
 
 Revision 4.2.5
@@ -117,7 +119,6 @@ Revision 4.2.5
   unconfirmed notifications reception (to let NotificationReceiver
   Apps browsing request details).
   (transport information at the moment) at SNMP engine.
--
 - Asyncsock sockets now configured with SO_REUSEADDR option to fix possible
   Windows error 10048.
 - Gracefully handle malformed SnmpEngineID at USM coming from SNMPv3 header.
